ASP.Net MVC Concepts

--- a/Day 16/shoppingAPP_MVC/shoppingAPP_MVC/appsettings.json
+++ b/Day 16/shoppingAPP_MVC/shoppingAPP_MVC/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "shoppingAPP_MVCContextConnection": "Server=(localdb)\\mssqllocaldb;Database=shoppingAPP_MVC;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
